--- a/configure.in
+++ b/configure.in
@@ -2,9 +2,10 @@ dnl
 dnl $Id: configure.in,v 1.3 2000/10/16 09:37:44 withnail Exp $
 dnl
 
-AC_INIT(radstock.c)
+AC_INIT
+AC_CONFIG_SRCDIR([radstock.c])
 
-AC_CANONICAL_SYSTEM
+AC_CANONICAL_TARGET
 
 AC_PROG_CC
 AC_PROG_YACC
@@ -70,7 +71,18 @@ fi
 
 AC_C_CONST
 AC_TYPE_SIZE_T
-AC_TYPE_SIGNAL
+AC_DIAGNOSE([obsolete],[your code may safely assume C89 semantics that RETSIGTYPE is void.
+Remove this warning and the `AC_CACHE_CHECK' when you adjust the code.])dnl
+AC_CACHE_CHECK([return type of signal handlers],[ac_cv_type_signal],[AC_COMPILE_IFELSE(
+[AC_LANG_PROGRAM([#include <sys/types.h>
+#include <signal.h>
+],
+		 [return *(signal (0, 0)) (0) == 1;])],
+		   [ac_cv_type_signal=int],
+		   [ac_cv_type_signal=void])])
+AC_DEFINE_UNQUOTED([RETSIGTYPE],[$ac_cv_type_signal],[Define as the return type of signal handlers
+		    (`int' or `void').])
+
 AC_FUNC_ALLOCA
 
 
@@ -83,8 +95,7 @@ case "$target_os" in
 	AC_DEFINE(LINUX)
 
 	AC_MSG_CHECKING(for a dumb udphdr declaration)
-	AC_TRY_COMPILE(,
-#ifndef __FAVOR_BSD
+	AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[]], [[#ifndef __FAVOR_BSD
 #define __FAVOR_BSD
 #endif
 
@@ -96,9 +107,7 @@ case "$target_os" in
 
 struct udphdr foo;
 unsigned short bar = foo.uh_sport;
-,
-	echo nope,
-        echo yep dumb; AC_DEFINE(HAVE_DUMB_UDPHDR))
+]])],[echo nope],[echo yep dumb; AC_DEFINE(HAVE_DUMB_UDPHDR)])
 
         ;;
 
@@ -147,4 +156,5 @@ AC_CHECK_LIB(pcap, pcap_restart, AC_DEFINE(PCAP_RESTART,pcap_restart),
    exit)))
 
 
-AC_OUTPUT(Makefile)
+AC_CONFIG_FILES([Makefile])
+AC_OUTPUT
